--- a/css/utilities/_font.scss
+++ b/css/utilities/_font.scss
@@ -33,7 +33,8 @@
 }
 
 .font16 {
-    font-size: 16px;
+    font-size: 18px;
+    font-family: TTHovesR;
     letter-spacing: -0.3px;
     line-height: 1.5;
 }
